cmake_minimum_required(VERSION 3.16)

project(bmptopngconvtools C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build) 

set(CORE_BASE_EXE_DIR ${SOURCES_DIRECTORY}/sources)

file(GLOB SFILES   "${CMAKE_CURRENT_SOURCE_DIR}/sources/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/sources/*.h")

add_executable(bmptopngconv ${SFILES})
